linkerd-demo/kustomize/overlays/flagger/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: silly-demo
  labels:
    app: silly-demo
spec:
  selector:
    matchLabels:
      app: silly-demo
  template:
    metadata:
      labels:
        app: silly-demo
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/proxy-cpu-limit: "0.5"
        config.linkerd.io/proxy-cpu-request: "0.1"
        config.linkerd.io/proxy-memory-limit: 1Gi
        config.linkerd.io/proxy-memory-request: 64Mi
    spec:
      containers:
      - name: silly-demo
        image: vfarcic/silly-demo:1.0.3
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
